--- a/Datra.Unity.Sample/Packages/manifest.json
+++ b/Datra.Unity.Sample/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.penspanic.datra": "file:../../Datra",
+    "com.penspanic.datra.sampledata": "file:../../Datra.SampleData",
     "com.penspanic.datra.unity": "file:../../Datra.Unity",
     "com.unity.2d.animation": "11.0.0",
     "com.unity.2d.aseprite": "1.2.5",
