Add Localization Support

--- a/Datra.Tests/Datra.Tests.csproj
+++ b/Datra.Tests/Datra.Tests.csproj
@@ -38,5 +38,10 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
+    
+    <!-- Include localization CSV files as additional files for the source generator -->
+    <ItemGroup>
+        <AdditionalFiles Include="..\Datra.SampleData\Resources\Localizations\LocalizationKeys.csv" Link="LocalizationKeys.csv" />
+    </ItemGroup>
 
 </Project>
