--- a/Datra.SampleData/Datra.SampleData.csproj
+++ b/Datra.SampleData/Datra.SampleData.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <!-- Make project directory available to source generators -->
+    <ItemGroup>
+        <CompilerVisibleProperty Include="ProjectDir" />
+    </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Datra.Generators\Datra.Generators.csproj"
@@ -13,5 +18,10 @@
                           OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Datra\Datra.csproj" />
+    </ItemGroup>
+    
+    <!-- Include localization CSV files as additional files for the source generator -->
+    <ItemGroup>
+        <AdditionalFiles Include="Resources\Localizations\LocalizationKeys.csv" />
     </ItemGroup>
 </Project>
