Resave sample data files

--- a/Datra.SampleData/Resources/GameConfig.json
+++ b/Datra.SampleData/Resources/GameConfig.json
@@ -3,10 +3,28 @@
   "MaxLevel": 100,
   "ExpMultiplier": 1.5,
   "DefaultMode": "Normal",
-  "AvailableModes": ["Easy", "Normal", "Hard", "Expert"],
-  "EnabledRewards": ["Gold", "Experience", "Item"],
+  "AvailableModes": [
+    "Easy",
+    "Normal",
+    "Hard",
+    "Expert"
+  ],
+  "EnabledRewards": [
+    "Gold",
+    "Experience",
+    "Item"
+  ],
+  "DefaultLanguage": "Undefined",
   "DefaultCharacter": "hero_001",
   "StartingItem": 1001,
-  "UnlockableCharacters": ["hero_002", "hero_003", "hero_004"],
-  "StartingItems": [1001, 1002, 2001]
+  "UnlockableCharacters": [
+    "hero_002",
+    "hero_003",
+    "hero_004"
+  ],
+  "StartingItems": [
+    1001,
+    1002,
+    2001
+  ]
 }
