Add multi-context support with required context name
- DatraConfigurationAttribute now requires contextName as constructor parameter
- Generated class is named {ContextName}Context (e.g., "GameData" → GameDataContext)
- Default namespace changed to {AssemblyName}.Generated
- Add diagnostic errors DATRA001/DATRA002 for missing/invalid attribute
- Fix GeneratorLogger duplicate output issue
- Add Datra.SampleData2 project with ShopContext for multi-context testing
- Update all test files to use new namespace (Datra.SampleData.Generated)

--- a/Datra.Tests/Datra.Tests.csproj
+++ b/Datra.Tests/Datra.Tests.csproj
@@ -17,6 +17,7 @@
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Datra.SampleData\Datra.SampleData.csproj" />
+        <ProjectReference Include="..\Datra.SampleData2\Datra.SampleData2.csproj" />
         <ProjectReference Include="..\Datra\Datra.csproj" />
     </ItemGroup>
 
