Fix Unity test compilation and API usage
- Add "Datra Sample Data" assembly reference to test asmdef
- Fix ResourcesRawDataProvider constructor (no args, not 1 arg)
- Use IReadOnlyDictionary.Count instead of GetAll()
- Use GetField() instead of GetProperty() for PooledPrefab fields

--- a/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
+++ b/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Datra",
-        "Datra.Unity"
+        "Datra.Unity",
+        "Datra Sample Data"
     ],
     "includePlatforms": [
         "Editor"
