Add ViewModel unit tests with mock services
- Create MockDataService and MockChangeTrackingService for testing
- Add tests for ViewModel creation, state management, commands
- Add Datra.Unity.Editor reference to test asmdef
- Test PropertyChanged events and operation callbacks

--- a/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
+++ b/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
@@ -6,6 +6,7 @@
         "UnityEditor.TestRunner",
         "Datra",
         "Datra.Unity",
+        "Datra.Unity.Editor",
         "Datra Sample Data"
     ],
     "includePlatforms": [
