Integrate Datra.Editor with Unity Editor
- Add Datra.Editor.asmdef for Unity compatibility (noEngineReferences: true)
- Add INotifyModifiedStateChanged interface to Datra.Editor
- Update Datra.Unity.Editor to reference Datra.Editor assembly
- Remove duplicate INotifyModifiedStateChanged from DatraDataManager
- Update RepositoryChangeTracker and LocalizationChangeTracker to use shared interface

--- a/Datra.Editor/Datra.Editor.asmdef
+++ b/Datra.Editor/Datra.Editor.asmdef
@@ -1,14 +1,10 @@
 {
-    "name": "Datra.Unity.Editor",
-    "rootNamespace": "Datra.Unity.Editor",
+    "name": "Datra.Editor",
+    "rootNamespace": "Datra.Editor",
     "references": [
-        "Datra",
-        "Datra.Editor",
-        "Datra.Unity"
+        "Datra"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
@@ -16,5 +12,5 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
