Add Datra.Editor as Unity package and fix missing references
- Add package.json for Datra.Editor Unity package
- Update manifest.json to include Datra.Editor package reference
- Add using Datra.Editor.Interfaces to Unity Editor services

--- a/Datra.Unity.Sample/Packages/manifest.json
+++ b/Datra.Unity.Sample/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.penspanic.datra": "file:../../Datra",
+    "com.penspanic.datra.editor": "file:../../Datra.Editor",
     "com.penspanic.datra.sampledata": "file:../../Datra.SampleData",
     "com.penspanic.datra.unity": "file:../../Datra.Unity",
     "com.unity.2d.animation": "12.0.2",
