Consolidate Unity Editor to use Datra.Editor interfaces
- Remove redundant Unity Editor interfaces (IChangeTrackingService, IDataService, ILocalizationEditorService)
- Remove redundant Unity Editor services (ChangeTrackingService, DataService, LocalizationEditorService)
- Move IRepositoryChangeTracker to Datra.Editor.Interfaces
- Update DatraDataManagerAdapter to implement IDataEditorService
- Update LocalizationEditorServiceAdapter to implement ILocaleEditorService
- Simplify DatraEditorViewModel to use Datra.Editor interfaces directly
- Enhance DataFilePath with Empty, Combine, IsNullOrEmpty helpers

Removes ~800 lines of duplicate code by using shared Datra.Editor services

--- a/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
+++ b/Datra.Unity.Sample/Assets/Tests/Editor/Datra.Unity.Tests.Editor.asmdef
@@ -5,6 +5,7 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Datra",
+        "Datra.Editor",
         "Datra.Unity",
         "Datra.Unity.Editor",
         "Datra Sample Data"
