Add shared Datra.Editor layer and unit tests
Datra.Editor (new shared layer):
- Add IFieldTypeHandler interface (Priority, CanHandle)
- Add FieldCreationContext with 3 constructors (property, nested member, collection)
- Add FieldLayoutMode enum (Form, Table, Inline)
- Add FieldTypeRegistry for handler registration/lookup
- Add TypeDetectionHelper for type detection utilities

Datra.Unity:
- Add IUnityFieldHandler extending IFieldTypeHandler
- Replace DatraFieldLayoutMode with shared FieldLayoutMode
- Update 12 files to use shared types

Tests (79 new tests):
- TypeDetectionHelperTests (25 tests)
- FieldTypeRegistryTests (19 tests)
- FieldCreationContextTests (35 tests)

--- a/Datra.Tests/Datra.Tests.csproj
+++ b/Datra.Tests/Datra.Tests.csproj
@@ -19,6 +19,7 @@
         <ProjectReference Include="..\Datra.SampleData\Datra.SampleData.csproj" />
         <ProjectReference Include="..\Datra.SampleData2\Datra.SampleData2.csproj" />
         <ProjectReference Include="..\Datra\Datra.csproj" />
+        <ProjectReference Include="..\Datra.Editor\Datra.Editor.csproj" />
     </ItemGroup>
 
     <ItemGroup>
