Fix EmitPhysicalFiles causing duplicate class definitions
Problem: When EmitPhysicalFiles=true, both context.AddSource() and physical
files were included in compilation, causing CS0101 duplicate definition errors.

Also fixes CS0200 error where generated Ref property (getter-only) was being
assigned in constructors when physical files existed from previous builds.

Changes:
- Skip context.AddSource() when EmitPhysicalFiles=true (physical files only)
- Exclude "Ref" property from GetConstructorProperties() (auto-generated)
- Add InternalsVisibleTo for Datra.Tests
- Add DataModelInfoTests (5 tests) for GetConstructorProperties behavior

--- a/Datra.Tests/Datra.Tests.csproj
+++ b/Datra.Tests/Datra.Tests.csproj
@@ -10,9 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Datra.Generators\Datra.Generators.csproj" 
-                          OutputItemType="Analyzer" 
+        <!-- Reference as Analyzer for source generation -->
+        <ProjectReference Include="..\Datra.Generators\Datra.Generators.csproj"
+                          OutputItemType="Analyzer"
                           ReferenceOutputAssembly="false" />
+        <!-- Also reference as library for unit testing Generator internals -->
+        <ProjectReference Include="..\Datra.Generators\Datra.Generators.csproj" />
         <ProjectReference Include="..\Datra.Analyzers\Datra.Analyzers.csproj" 
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false" />
